recipe filter size on mobile fix

--- a/src/pages/Recipes/styles.css
+++ b/src/pages/Recipes/styles.css
@@ -131,6 +131,11 @@
     min-width: 90px;
     width: 90px;
     font-size: 12px;
+    height: 32px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
